# inspect-bridge

./: CMakeLists.txt  package.xml
addon/: ROS2.addon
include/inspect_bridge/: libfmt_compat.hpp
include/inspect_bridge/act/: action_base.hpp
include/inspect_bridge/act/actions/: align.hpp  cad.hpp  calibrate.hpp  compare.hpp  new.hpp  polygonize.hpp  scan.hpp  visual.hpp  write.hpp
include/inspect_bridge/util/: demangle.hpp  libfmt_compat.hpp  network.hpp  paths.hpp  system.hpp
interfaces/act/: Cad.action  New.action  Polygonize.action  Scan.action  Write.action
src/: action_node.cpp  dummy.cpp  scan_coordinate.cpp
src/act/: new.cpp  node.cpp  polygonize.cpp  scan.cpp  write.cpp
